[package]
name = "submerge"
version = "0.2.0"
edition = "2021"
description = "Experimental database thing"
readme = "README.md"
repository = "https://github.com/graydon/submerge"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redb = "1.3.0"
brevet = {path = "../brevet"}
newel = "0.2"
clepsydra = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
