[package]
name = "submerge-base"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
extent = "0.5.0"
tracing.workspace = true
backtrace-error.workspace = true

[dev-dependencies]
test-log.workspace = true