[package]
name = "submerge-coldb"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
submerge-base = { path = "../submerge-base" }
funty.workspace = true
ordered-float.workspace = true
rapidhash.workspace = true
memchr.workspace = true

[dev-dependencies]
test-log.workspace = true
