[package]
name = "submerge-lang"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bs = {version="0.3", features=["serde"]}
ordered-float = { version = "4.2.0", features = ["serde"] }
backtrace-error = "0.5.1"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
