[package]
name = "submerge-net"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
backtrace-error = "0.5.0"
submerge-lang = { path = "../submerge-lang" }