[package]
name = "submerge-net"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
submerge-lang = { path = "../submerge-lang" }
submerge-base = { path = "../submerge-base" }