[package]
name = "submerge-txn"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
submerge-lang = { path = "../submerge-lang" }
submerge-eval = { path = "../submerge-eval" }
submerge-net = { path = "../submerge-net" }
submerge-base = { path = "../submerge-base" }
serde.workspace = true

[dev-dependencies]
stateright = "0.30.2"